fixing overlapping of images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,4 @@
-
-
 body {
-    color: var(--tertiary-color);
     font-family: Helvetica, Arial, Helvetica, sans-serif;
     background-color: cornsilk;
 }
@@ -13,7 +10,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    /* top: 0; */
+    top: 0;
 }
 
 header h1 {
@@ -25,13 +22,21 @@ header h1 {
     background-color: teal;
 }
 
-/* .name-box {
+.name-box {
+    display: flex;
+    flex-wrap: wrap;
     width: 200px;
     height: 100px;
     background: teal;
     overflow: auto;
     border-left: none;
-} */
+}
+
+#about.me {
+  text-align-last: left;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 header a {
     text-decoration: none;
@@ -58,7 +63,6 @@ header nav ul li a {
     text-decoration: underline 4px;
     text-underline-offset: 8px;
     text-decoration-color: teal ;
-    /* need to figure out how to get underline longer than text */
 }
 
 .hero {
@@ -98,61 +102,58 @@ header nav ul li a {
   font-size: xx-large;
   color: teal;
   width: 20%;
+  font-weight: bolder;
+  border-right: teal;
 }
-
-#my-work img {
+/* 
+#work-image {
   border: solid 6px;
   background-color: teal;
   max-width: 500px;
   max-height: 500px;
   position: absolute;
-}
+  display: flexbox;
+} */
 
 /* left column */
-#my-work {
-    text-align: left;
+/* #my-work {
     font-size: 40px;
     font-display: bold;
     color: teal;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
     flex-direction: row;
-}
-
-#my-work div {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  /* width: 70%; */
-}
-
-
-#my-work div section {
-  font-size: 20px;
-  width: 50%;
-}
-
-/* #surf-report {
-  width: 100%;
-  border: teal;
 } */
 
-#section-title {
-  background-color: teal;
-  color: aliceblue;
-  margin-left: auto;
-  position: absolute;
-  margin-top: 259px;
-  width: 10%;
-  text-align: right;
+.info {
+  justify-content: space-between;
 }
 
-/* #section-subtitle {
+#surfreport-section-title {
   background-color: teal;
   color: aliceblue;
-  margin-left: auto;
+  margin-top: 540px;
+  width: 20%;
+  text-align: center;
   position: absolute;
-} */
+  font-size: 28px;
+  font-weight: bolder;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#surfreport-section-subtitle {
+  background-color: teal;
+  color: aliceblue;
+  text-align: center;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+#surf-report .img-thumbnail {
+  border: solid 8px;
+  border-color: teal;
+  position: absolute;
+}
 
 
 #my-work div section p {
@@ -160,27 +161,21 @@ header nav ul li a {
 
 }
 
-/* Right section */
-.info {
-    /* text-align: right; */
-    justify-content: space-between;
-}
-
-section p {
+/* section p {
     display: flex;
     justify-content: space-between;
     text-align: right;
 
-}
+} */
 
 /* FOOTER */
 
-.contact-me {
+/* .contact-me {
     padding: 20px 35px; 
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
+} 
 
 .resume {
     padding: 20px 35px; 
@@ -190,7 +185,7 @@ section p {
     image-rendering: auto;
 }
 
-contact-me p {
+.contact-me p {
     size: 2px;
 }
 
@@ -208,6 +203,10 @@ footer div {
     text-align: right;
 }
 
+footer image {
+  display: flex;
+} */
+
 
   .contact {
       background: var(--secondary-color);
@@ -223,7 +222,7 @@ footer div {
       flex-wrap: wrap;
       text-align: right;
       padding: 10px 15px;
-      color: teal;
+      color: black;
       font-size: 1.55vw;
   }
 
@@ -252,7 +251,7 @@ footer div {
     display: flex;
   }
 
-  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+  MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
   /* @media screen and (max-width: 980px) {
     header {
       padding-bottom: 0;
@@ -298,7 +297,7 @@ footer div {
   } */
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-  /* @media screen and (max-width: 575px) {
+/* /* /* @media screen and (max-width: 575px) {
     .hero-form button {
         width: 100%;
       }
@@ -311,7 +310,7 @@ footer div {
         width: 100%;
       }
     
-      .trainer {
+      .trainer   {
         flex: 0 100%;
       }
     
@@ -325,5 +324,4 @@ footer div {
 
       .contact-form {
           order: 3;
-      }
-  } */ */
+      } */
